--- a/story/static/story/base.css
+++ b/story/static/story/base.css
@@ -64,3 +64,9 @@ div.transbox p {
     font-weight: bold;
     color: #000000;
 }
+
+.item { width: 25%; }
+
+.item.w2 { width: 50%; }
+
+.grid-sizer { width: 100%; }
