fixed href issue

--- a/post/templates/post/profile.html
+++ b/post/templates/post/profile.html
@@ -7,7 +7,7 @@
 					
 						{% for pic in pics %}
 
-							<a href="http://127.0.0.1:8000/post/{{pic.1}}"><img src="{{ pic.0 }}" style="height:448px"></a>
+							<a href="/post/{{pic.1}}"><img src="{{ pic.0 }}" style="height:448px"></a>
 		
 								
 						{% endfor %}
