--- a/post/templates/post/gallery.html
+++ b/post/templates/post/gallery.html
@@ -8,7 +8,7 @@
   		
 	
 						{% for pic in pics_list %}
-							<a href="http://127.0.0.1:8000/post/{{pic.1}}"><img src="{{ pic.0 }}" style="height:413px"></a>		
+							<a href="/post/{{pic.1}}"><img src="{{ pic.0 }}" style="height:413px"></a>		
 								{% endfor %}
 	</div>
 
