--- a/post/templates/post/list.html
+++ b/post/templates/post/list.html
@@ -12,11 +12,11 @@
         <div class="col-md-6 col-md-offset-3">
              <div class="background">
                  <div class="transbox">
-            <a href="http://127.0.0.1:8000/post/list" class="list-group-item active">Travel Stories </a>
+            <a href="/post/list" class="list-group-item active">Travel Stories </a>
                 {% if post %}
                     <ul>
                     {% for item in post %}
-                		<a href="http://127.0.0.1:8000/post/{{item.id}}" class="list-group-item">{{ item.post_title }} by {{item.user.username}}</a>
+                		<a href="/{{item.id}}" class="list-group-item">{{ item.post_title }} by {{item.user.username}}</a>
                     {% endfor %}
                     </ul>
                 {% else %}
