images loading issue

--- a/post/templates/post/gallery.html
+++ b/post/templates/post/gallery.html
@@ -2,14 +2,16 @@
 
 <title>GALLERY</title>
 <html>
-
-
-	<div class="masonry js-masonry"  data-masonry-options='{ "isFitWidth": true }'>
+<head><script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+</head>
+	<div class="masonry js-masonry">
+		<div class= "item">
   		
 	
 						{% for pic in pics_list %}
-							<a href="/post/{{pic.1}}"><img src="{{ pic.0 }}" style="height:413px"></a>		
+							<a href="/post/{{pic.1}}"><img src="{{ pic.0 }}" style="height:400px"></a>		
 								{% endfor %}
+		</div>
 	</div>
 
 
@@ -17,14 +19,35 @@
 <script src="///cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
 
 <script>
-$(document).ready
-var container = document.querySelector('#container');
-var msnry = new Masonry( container, {
-  // options
-  columnWidth: 120,
-  itemSelector: '.item'
+$(document).ready(function () {
+	var container = document.querySelector('#container');
+	var msnry = new Masonry( container, {
+	  // options
+	  columnWidth: 120,
+	  itemSelector: '.item'
+	})
 });
 
+
 </script>
+
+ <script>
+$(window).load(function() {
+
+  var container = document.querySelector('#container');
+  var msnry;
+
+  // initialize Masonry after all images have loaded
+  imagesLoaded( container, function() {
+    msnry = new Masonry( container, {
+      itemSelector: '.item',
+      // columnWidth: container.querySelector('.grid-sizer')
+    });
+  });
+
+  msnry.bindResize();
+
+});
+ </script>
 
 </html>
