--- a/story/templates/story/base.html
+++ b/story/templates/story/base.html
@@ -9,6 +9,8 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
+<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+
 <html>
       {% if user.first_name %}
                        <h2> Hi {{user.first_name}} </h2>
